# ds-anywhere

./: .gitignore  README.md  __init__.py  buildtools.py
.github/workflows/: artifact-build.yml
frontend/: .gitignore  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.ts
frontend/src/: app.tsx
frontend/src/components/: emulator.css  emulator.tsx  entrypoint.css  entrypoint.tsx  main.css  main.tsx  settings.css  settings.tsx
frontend/src/components/settings-menus/: controls.css  controls.tsx  firmware.css  firmware.tsx  input.css  input.tsx  personalization.css  personalization.tsx
scripts/: __init__.py  action-runner-setup.sh  actions_artifacts.py  frontend_build.py  full_build.py  wasm_build.py
scripts/common/: colors.py  constants.py  output.py  procutil.py
wasmelonDS/: CMakeLists.txt  README.md
wasmelonDS/src/: CMakeLists.txt  GBACart.cpp  GPU3D.cpp  GPU3D.h  NDS.cpp  NDS.h  NDSCart.h  PlatformOGL.h  version.h
wasmelonDS/src/frontend/wasm/: CMakeLists.txt  WasmEmuThread.cpp  WasmEmuThread.h  WasmEmulator.cpp  WasmEmulator.h  WasmFirmwareSettings.cpp  WasmFirmwareSettings.h  WasmNdsCart.cpp  WasmNdsCart.h  WasmPlatform.cpp  WasmPlatformUtil.cpp  WasmPlatformUtil.h
webmelon-sdk/: .gitignore  example.html  webmelon.d.ts  webmelon.js
